--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -10,36 +10,63 @@
         <!--<Grid.Resources>
             <StaticResource ResourceKey="raceNames" x:Key="raceNames"/>
         </Grid.Resources>-->
-        <Button Content="Roll Stats" HorizontalAlignment="Center" Margin="641,217,0,0" VerticalAlignment="Top" Click="Button_Click"/>
-        
-        <TextBox x:Name="strDisplay" Text="10" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Padding="0,0,0,0" HorizontalAlignment="Left" Margin="37,0,0,538" VerticalAlignment="Bottom" Width="55" Height="55" FontSize="36" FontWeight="Bold" BorderBrush="Black" BorderThickness="2,2,2,2"/>
-        <Label Content="Strength" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" HorizontalAlignment="Left" Margin="10,0,0,592" VerticalAlignment="Bottom" FontSize="16" FontWeight="Bold" Width="110"/>
-        
-        <TextBox x:Name="dexDisplay" Text="10" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Padding="0,0,0,0" HorizontalAlignment="Left" Margin="37,0,0,443" VerticalAlignment="Bottom" Width="55" Height="55" FontSize="36" FontWeight="Bold" BorderBrush="Black" BorderThickness="2,2,2,2"/>
-        <Label Content="Dexterity" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" HorizontalAlignment="Left" Margin="10,0,0,497" VerticalAlignment="Bottom" FontSize="16" FontWeight="Bold" Width="110"/>
-        
-        <TextBox x:Name="conDisplay" Text="10" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Padding="0,0,0,0" HorizontalAlignment="Left" Margin="37,0,0,348" VerticalAlignment="Bottom" Width="55" Height="55" FontSize="36" FontWeight="Bold" BorderBrush="Black" BorderThickness="2,2,2,2"/>
-        <Label Content="Constitution" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" HorizontalAlignment="Left" Margin="10,0,0,402" VerticalAlignment="Bottom" FontSize="16" FontWeight="Bold" Width="110"/>
-        
-        <TextBox x:Name="intDisplay" Text="10" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Padding="0,0,0,0" HorizontalAlignment="Left" Margin="37,0,0,253" VerticalAlignment="Bottom" Width="55" Height="55" FontSize="36" FontWeight="Bold" BorderBrush="Black" BorderThickness="2,2,2,2"/>
-        <Label Content="Intelligence" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" HorizontalAlignment="Left" Margin="10,0,0,307" VerticalAlignment="Bottom" FontSize="16" FontWeight="Bold" Width="110"/>
-        
-        <TextBox x:Name="wisDisplay" Text="10" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Padding="0,0,0,0" HorizontalAlignment="Left" Margin="37,0,0,158" VerticalAlignment="Bottom" Width="55" Height="55" FontSize="36" FontWeight="Bold" BorderBrush="Black" BorderThickness="2,2,2,2"/>
-        <Label Content="Wisdom" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" HorizontalAlignment="Left" Margin="10,0,0,212" VerticalAlignment="Bottom" FontSize="16" FontWeight="Bold" Width="110"/>
-        
-        <TextBox x:Name="chaDisplay" Text="10" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Padding="0,0,0,0" HorizontalAlignment="Left" Margin="37,0,0,63" VerticalAlignment="Bottom" Width="55" Height="55" FontSize="36" FontWeight="Bold" BorderBrush="Black" BorderThickness="2,2,2,2"/>
-        <Label Content="Charisma" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" HorizontalAlignment="Left" Margin="10,0,0,117" VerticalAlignment="Bottom" FontSize="16" FontWeight="Bold" Width="110"/>
-        
-        <Button x:Name="StrDexSwap" Content="Swap" HorizontalAlignment="Left" Margin="50,122,0,0" VerticalAlignment="Top"/>
-        <TextBox x:Name="characterName" HorizontalAlignment="Left" Margin="37,35,0,0" TextWrapping="Wrap" VerticalAlignment="Top"  VerticalContentAlignment="Center" HorizontalContentAlignment="Left" Width="150" FontSize="20" Height="35" BorderBrush="Black" BorderThickness="2,2,2,2" TextChanged="characterName_TextChanged"/>
-        
-        <ComboBox x:Name="raceComboBox" HorizontalAlignment="Left" Margin="550,35,0,0" VerticalAlignment="Top" Width="120" IsEditable="True" IsReadOnly="True" SelectionChanged="RaceComboBox_SelectionChanged" Height="30" BorderBrush="Black" BorderThickness="2,2,2,2"/>
-        <ComboBox x:Name="subraceComboBox" HorizontalAlignment="Left" Margin="700,35,0,0" VerticalAlignment="Top" Width="120" IsEditable="True" IsReadOnly="True" SelectionChanged="SubraceComboBox_SelectionChanged" Height="30" BorderBrush="Black" BorderThickness="2,2,2,2"/>
+        <DockPanel x:Name="MainDockPanel" LastChildFill="False">
+            <StackPanel x:Name="TopPanel" Orientation="Horizontal" DockPanel.Dock="Top">
+                <ContentControl Width="50" Height="80">
+                </ContentControl>
+                <ComboBox x:Name="raceComboBox" HorizontalAlignment="Center" VerticalAlignment="Center" Width="120" IsEditable="True" IsReadOnly="True" SelectionChanged="RaceComboBox_SelectionChanged" Height="30" BorderBrush="Black" BorderThickness="2,2,2,2" Padding="2,2,2,2" ScrollViewer.CanContentScroll="False"/>
+                <ContentControl Width="25" Height="80">
+                </ContentControl>
+                <ComboBox x:Name="subraceComboBox" HorizontalAlignment="Center" VerticalAlignment="Center" Width="120" IsEditable="True" IsReadOnly="True" SelectionChanged="SubraceComboBox_SelectionChanged" Height="30" BorderBrush="Black" BorderThickness="2,2,2,2"/>
+                <ContentControl Width="50" Height="80">
+                </ContentControl>
+                <ComboBox x:Name="roleComboBox" HorizontalAlignment="Center" VerticalAlignment="Center" Width="120" IsEditable="True" IsReadOnly="True" SelectionChanged="roleComboBox_SelectionChanged" Height="30" BorderBrush="Black" BorderThickness="2,2,2,2"/>
+                <ContentControl Width="25" Height="80">
+                </ContentControl>
+                <ComboBox x:Name="subroleComboBox" HorizontalAlignment="Center" VerticalAlignment="Center" Width="120" IsEditable="True" IsReadOnly="True" SelectionChanged="subroleComboBox_SelectionChanged" Height="30" BorderBrush="Black" BorderThickness="2,2,2,2"/>
+            </StackPanel>
+            <StackPanel x:Name="AbilityScorePanel">
+                <StackPanel Height="48" Width="150">
+                    <Button Content="Roll Stats" HorizontalAlignment="Center" Click="Button_Click" VerticalAlignment="Center"/>
+                    <CheckBox x:Name="AutoBonusCheckbox" Content="Automate Bonuses" HorizontalAlignment="Center" VerticalAlignment="Center" Checked="AutoBonusCheckbox_Checked" Unchecked="AutoBonusCheckbox_Unchecked"/>
+                </StackPanel>
+                <StackPanel Height="100" Width="100">
+                    <Label Content="Strength" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="16" FontWeight="Bold" Width="110"/>
+                    <TextBox x:Name="strDisplay" Text="10" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Padding="0,0,0,0" HorizontalAlignment="Center" VerticalAlignment="Center" Width="55" Height="55" FontSize="36" FontWeight="Bold" BorderBrush="Black" BorderThickness="2,2,2,2"/>
+                </StackPanel>
 
-        <ComboBox x:Name="classComboBox" HorizontalAlignment="Left" Margin="250,35,0,0" VerticalAlignment="Top" Width="120" IsEditable="True" IsReadOnly="True" SelectionChanged="classComboBox_SelectionChanged" Height="30" BorderBrush="Black" BorderThickness="2,2,2,2"/>
-        <ComboBox x:Name="subclassComboBox" HorizontalAlignment="Left" Margin="400,35,0,0" VerticalAlignment="Top" Width="120" IsEditable="True" IsReadOnly="True" SelectionChanged="subclassComboBox_SelectionChanged" Height="30" BorderBrush="Black" BorderThickness="2,2,2,2"/>
+                <StackPanel Height="100" Width="100">
+                    <Label Content="Dexterity" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="16" FontWeight="Bold" Width="110"/>
+                    <TextBox x:Name="dexDisplay" Text="10" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Padding="0,0,0,0" HorizontalAlignment="Center" VerticalAlignment="Center" Width="55" Height="55" FontSize="36" FontWeight="Bold" BorderBrush="Black" BorderThickness="2,2,2,2" DockPanel.Dock="Bottom"/>
+                </StackPanel>
 
-        <TextBox x:Name="Level" PreviewTextInput="PreviewLevelInput" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" HorizontalAlignment="Left" Margin="512,144,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="30" Height="30" FontSize="18" TextChanged="Level_TextChanged"/>
+                <StackPanel Height="100" Width="100">
+                    <Label Content="Constitution" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="16" FontWeight="Bold" Width="110"/>
+                    <TextBox x:Name="conDisplay" Text="10" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Padding="0,0,0,0" HorizontalAlignment="Center" VerticalAlignment="Center" Width="55" Height="55" FontSize="36" FontWeight="Bold" BorderBrush="Black" BorderThickness="2,2,2,2"/>
+                </StackPanel>
 
+                <StackPanel Height="100" Width="100">
+                    <Label Content="Intelligence" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="16" FontWeight="Bold" Width="110"/>
+                    <TextBox x:Name="intDisplay" Text="10" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Padding="0,0,0,0" HorizontalAlignment="Center" VerticalAlignment="Center" Width="55" Height="55" FontSize="36" FontWeight="Bold" BorderBrush="Black" BorderThickness="2,2,2,2"/>
+                </StackPanel>
+
+                <StackPanel Height="100" Width="100">
+                    <Label Content="Wisdom" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="16" FontWeight="Bold" Width="110"/>
+                    <TextBox x:Name="wisDisplay" Text="10" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Padding="0,0,0,0" HorizontalAlignment="Center" VerticalAlignment="Center" Width="55" Height="55" FontSize="36" FontWeight="Bold" BorderBrush="Black" BorderThickness="2,2,2,2"/>
+                </StackPanel>
+
+                <StackPanel Height="101">
+                    <Label Content="Charisma" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="16" FontWeight="Bold" Width="110"/>
+                    <TextBox x:Name="chaDisplay" Text="10" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Padding="0,0,0,0" HorizontalAlignment="Center" VerticalAlignment="Center" Width="55" Height="55" FontSize="36" FontWeight="Bold" BorderBrush="Black" BorderThickness="2,2,2,2"/>
+                </StackPanel>
+            </StackPanel>
+            <StackPanel DockPanel.Dock="Top" Orientation="Horizontal">
+                <StackPanel>
+                    <TextBlock Text="Level" TextWrapping="Wrap" FontWeight="Bold" FontSize="16" HorizontalAlignment="Center" VerticalAlignment="Center" TextAlignment="Center"/>
+                    <ContentControl Height="5"/>
+                    <TextBox x:Name="Level" PreviewTextInput="CheckIntInput" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" HorizontalAlignment="Center" TextWrapping="Wrap" VerticalAlignment="Top" Width="55" Height="55" FontSize="36" TextChanged="Level_TextChanged" BorderBrush="Black" BorderThickness="2,2,2,2" FontWeight="Bold"/>
+                </StackPanel>
+            </StackPanel>
+        </DockPanel>
     </Grid>
 </Window>
