--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -69,6 +69,12 @@
                     <ContentControl Height="5"/>
                     <TextBox x:Name="Level" PreviewTextInput="CheckIntInput" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" HorizontalAlignment="Center" TextWrapping="Wrap" VerticalAlignment="Top" Width="55" Height="55" FontSize="36" TextChanged="Level_TextChanged" BorderBrush="Black" BorderThickness="2,2,2,2" FontWeight="Bold"/>
                 </StackPanel>
+                <ContentControl Width="50"/>
+                <StackPanel>
+                    <TextBlock Text="Speed" TextWrapping="Wrap" FontWeight="Bold" FontSize="16" HorizontalAlignment="Center" VerticalAlignment="Center" TextAlignment="Center"/>
+                    <ContentControl Height="5"/>
+                    <Label x:Name="Speed" PreviewTextInput="CheckIntInput" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" HorizontalAlignment="Center" VerticalAlignment="Center" Width="55" Height="55" FontSize="36" BorderBrush="Black" BorderThickness="2,2,2,2" FontWeight="Bold"/>
+                </StackPanel>
             </StackPanel>
         </DockPanel>
     </Grid>
